# spark-sched

./: .gitignore  Cargo.toml  README.md  run.sh  srun.sh
logs/5s2c/: .nfs000000000a426af8000008a5
scripts/: f.sh  p.sh  profile.sh  run.sh  sf.sh  sp.sh
spark-scheduler/: Cargo.toml
spark-scheduler/src/: main.rs  ops.rs  predprio.rs  sched.rs
spark-submitter/: Cargo.toml
spark-submitter/src/: cluster.rs  cmd.rs  main.rs  resource.rs
src/: cluster.rs  cmd.rs  main.rs  resource.rs
