[package]
name = "spark-submitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = { version = "4.1.13", features = ["derive"] }
kube = { version = "0.80.0", features = ["runtime", "derive"] }
kube-runtime = "0.80.0"
k8s-openapi = { version = "0.17.0", features = ["v1_26"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
